# Rust_price_prediction

./: Cargo.toml  README.md  ai_calls.py  model_predictor.py
src/: main.rs
