[package]
name = "PythonToRust"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
mongodb = "2.7.0"
tokio = { version = "1", features = ["full"] }
